[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/gfx/items/monitor.png" type="Texture" id=1]
[ext_resource path="res://src/items/Computer.gd" type="Script" id=2]
[ext_resource path="res://src/ui/ComputerPopup.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/gfx/lightmaps/monitor-light.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 48, 32 )

[node name="Computer" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 34.1501, 0 )
collision_layer = 8
collision_mask = 2147483649

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ComputerPopup" parent="CanvasLayer" instance=ExtResource( 3 )]

[node name="MonitorLight" type="Light2D" parent="."]
position = Vector2( 24, 0 )
rotation = 1.5708
scale = Vector2( 0.8, 0.6 )
enabled = false
texture = ExtResource( 4 )
[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_body_exited"]
[connection signal="input_event" from="Area2D" to="." method="_on_input_event"]
